# borang

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml
.github/workflows/: vercel_deploy.yml  vercel_preview.yml
.zed/: format.sh  settings.json
borang/: Cargo.toml
borang-docs/: Cargo.toml  index.html  input.scss
borang-docs/locales/: en.json  ms.json
borang-docs/src/: app.rs  main.rs
borang-docs/src/components/: code.rs  language.rs  menu.rs  mod.rs  theme.rs
borang-docs/src/components/icons/: align_justify.rs  book_text.rs  bug.rs  circle_alert.rs  github.rs  language.rs  mod.rs  x.rs
borang-docs/src/pages/: intro.rs  mod.rs  scaffold.rs
borang-docs/src/utils/: mod.rs  validation_i18n.rs
borang-macros/: Cargo.toml
borang-macros/src/: lib.rs
borang/src/: field.rs  form.rs  input.rs  lib.rs  macros.rs  rules.rs  select.rs  validation.rs
jspackages/: Cargo.toml  package.json  pnpm-lock.yaml
