[package]
name = "borang"
version = "0.1.0"
edition = "2024"
description = "Borang is a Leptos library for building web forms with validation."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jonsaw/borang"

[dependencies]
leptos = { version = "0.8" }
regex = "1.12.2"
borang-macros = { path = "../borang-macros" }
