[package]
name = "borang"
version = { workspace = true }
edition = { workspace = true }
description = "Borang is a Leptos library for building web forms with validation."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/jonsaw/borang"

[dependencies]
leptos = { version = "0.8" }
regex = "1.12.2"
borang-macros = { version = "0.1.1", path = "../borang-macros" }
